2006-04-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: fix ucAllowFullPageBitstream for AT90CAN128.

2006-04-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/avarice.1: Update documentation (new devices, missing option
	documentation, bump man page date), sort options alphabetically.
	* src/main.cc: Sort options alphabetically.

2006-04-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Michael De Nil:
	* src/jtag.h: Add support for JTAG daisy chainging;
	sourceforge.net patch tracker:
	https://sourceforge.net/tracker/index.php?func=detail&aid=1216263&group_id=39505&atid=425409
	* src/jtag1.h: (Ditto.)
	* src/jtag2.h: (Ditto.)
	* src/jtag2io.cc: (Ditto.)
	* src/jtagio.cc: (Ditto.)
	* src/main.cc: (Ditto.)

2006-04-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: Add support for AT90USB1287

2006-03-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: fix ucAllowFullPageBitstream for
	ATmega640/1280/1281.
	* configure.ac: bump version to post-2.4

2006-01-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* Release version 2.4.

2006-01-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: bump version to 2.4
	* INSTALL-FROM-CVS: adapt instructions for the auto* tools; we
	are not very picky about the exact versions as long as they are
	reasonably recent.

2005-11-17    <dgay@intel-research.net>


	* src/jtag2io.cc (sendJtagCommand): breakpoint handling was broken
	(breakpoints detected in recv, but jtagContinue called recvFrame).
	Fix by moving it all into jtagContinue. 
	Also add extra debug output.
	* src/jtag2.h (class jtag2): see jtag2io.cc.
	* src/jtag2run.cc (jtagContinue): see jtag2io.cc.

	* scripts/ice-gdb.in: gdb's -- options can also be used with a single
	dash

	* src/utils.cc (statusOut): send debug output to stderr

2005-10-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: add ATmega640/1280/1281

2005-09-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
